# GTest-GMock

./: .gitignore  README.md
1_GTestProject/: CMakeLists.txt  main.cpp  testRunner.cpp
2_Assertions/: Assertions.md
2_Assertions/BinaryOutputs/: LibraryCode.cpp  LibraryCode.hpp  main.cpp  testRunner.cpp
2_Assertions/ExceptionHandling/: LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
2_Assertions/StringHandling/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
3_TestFixtures/: Fixtures.md
3_TestFixtures/ParameterizedTests/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
3_TestFixtures/TestFixtures/: LibraryCode.cpp  LibraryCode.hpp  testRunner.cpp
4_GMockProject/: CMakeLists.txt  gmock.md
4_GMockProject/GMock_proj/: testRunner.cpp
4_GMockProject/gmock_setupTest/: testRunner.cpp
5_AssertionsOnVectors/gmock_callback/: CMakeLists.txt  IDatabaseConnection.cpp  IDatabaseConnection.hpp  testRunner.cpp
5_AssertionsOnVectors/vector_assertions/: LibraryCode.cpp  LibraryCode.hpp  WithOutCmake.txt  testRunner.cpp
6_CrossPlatformTests/: testRunner.cpp
